created router, controller and model for createComment
