# routes/comment.route.js
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+const router = Router();
+import {createComment} from '../controllers/comment.controller.js';
+
+
+router.post('/create', createComment);
+
+
+
+
+
+export default router;
